--- a/6-跨域/跨域.md
+++ b/6-跨域/跨域.md
@@ -2,3 +2,16 @@
 浏览器的一种安全策略
 同源: 协议、域名、端口号 必须完全相同
 违背同源策略就是跨域
+
+# 如何解决跨域
+
+* JSONP
+
+1) JSONP是什么
+JSONP是一个非官方的跨域解决方案，只支持get请求
+
+2) JSONP是怎么工作的
+在网页有一些标签天生具有跨域能力,比如:img link iframe script
+JSONP就是利用script标签的跨域能力来发送请求
+例如 axios <script src="https://cdn.bootcdn.net/ajax/libs/axios/0.21.1/axios.min.js"></script>
+
