--- a/6-跨域/跨域.md
+++ b/6-跨域/跨域.md
@@ -15,3 +15,10 @@ JSONP是一个非官方的跨域解决方案，只支持get请求
 JSONP就是利用script标签的跨域能力来发送请求
 例如 axios <script src="https://cdn.bootcdn.net/ajax/libs/axios/0.21.1/axios.min.js"></script>
 
+* CORS
+
+1) CORS是什么
+跨域资源共享 支持get和post请求
+
+2) CORS是怎么工作的
+通过设置一个响应头来告诉浏览器,该请求允许跨域,浏览器收到该响应以后就会对响应放行。
